Add powerline and fzf
* currently requires fzf and powerline already installed
* added bash directory
* separated bash aliases prompt and settings

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -5,9 +5,11 @@
 - clean: ['~']
 
 - link:
+    ~/.bash:
+    ~/.bashrc:
     ~/.dotfiles: ''
-    ~/.vimrc: vimrc
-    ~/.bashrc: bashrc
+    ~/.shell:
+    ~/.vimrc:
 
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
