--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,4 +14,5 @@
 
 - shell:
     - [git submodule update --init --recursive, Installing submodules]
+    - [~/.dotfiles/bash/plugins/fzf/install --all, Installing fzf] 
 
