Add powerline config install
Add configuration files to .config folder

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,8 @@
 - link:
     ~/.bash:
     ~/.bashrc:
+    ~/.config/powerline:
+        create: true
     ~/.dotfiles: ''
     ~/.gitconfig:
     ~/.shell:
