Add powerline config path

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,6 +9,7 @@
     ~/.bashrc:
     ~/.config/powerline:
         create: true
+        path: config/powerline
     ~/.dotfiles: ''
     ~/.gitconfig:
     ~/.shell:
