Add fonts installation

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -21,4 +21,5 @@
     - [~/.dotfiles/bash/plugins/fzf/install --all, Installing fzf]
     - [pip install --user powerline-status, Installing powerline]
     - [pip install --user powerline-gitstatus, Installing powerline git status]
+    - [~/.dotfiles/shell/fonts/install.sh, Installing fonts]
 
